Implemented boxes for activities (steps) and a simple algorithm for calculating each steps status when incomplete to show the goal progress depending on how much of the duration that has passed.

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -296,3 +296,11 @@ a.color-white, a.color-white:visited, a.color-white:active {
     height: 24px;
     width: 24px;
 }
+
+.step-box {
+    border: 1px solid grey;
+    height: 50px;
+    width: 50px;
+    float: left;
+    position: relative;
+}
